Using Fly Navigationing with camera after camera has been parented to an object #37806

Closed
opened 2013-12-13 11:09:52 +01:00 by jylhis · 8 comments
jylhis commented 2013-12-13 11:09:52 +01:00 (Migrated from localhost:3001)

System Information
OS: Windows 7 professional
Graphics card: NVIDIA GeForce GT 630
RAM: 16gb

Blender Version
Broken: Blender 2.69
Broken: 2195dd32cc (after FPS commit)

Short description of error
When you use fly navigationing (shift + f) in camera view (numpad 0) after camera has been parented to any object,
the object that is camera's parent and parent's parent move with the camera.

Exact steps for others to reproduce the error

  1. Open Blender
  2. Parent camera to the default cube
  3. Go to the camera view
  4. Move with the fly navigationing
  5. The cube moves like it would be parented to the camera not vice versa.

The file that shows the bug:
Camera_Fly_Navigationing_bug.blend

**System Information** OS: Windows 7 professional Graphics card: NVIDIA GeForce GT 630 RAM: 16gb **Blender Version** Broken: Blender 2.69 Broken: 2195dd32cc7b2f4bf26c7d216cbaba32f82184da (after FPS commit) **Short description of error** When you use fly navigationing (shift + f) in camera view (numpad 0) after camera has been parented to any object, the object that is camera's parent and parent's parent move with the camera. **Exact steps for others to reproduce the error** 1. Open Blender 2. Parent camera to the default cube 3. Go to the camera view 4. Move with the fly navigationing 5. The cube moves like it would be parented to the camera not vice versa. The file that shows the bug: [Camera_Fly_Navigationing_bug.blend](https://archive.blender.org/developer/F39618/Camera_Fly_Navigationing_bug.blend)
jylhis commented 2013-12-13 11:09:52 +01:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
jylhis commented 2013-12-13 11:09:52 +01:00 (Migrated from localhost:3001)
Author

Added subscriber: @jylhis

Added subscriber: @jylhis
Dalai Felinto self-assigned this 2013-12-13 12:51:08 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42 that dates back to the original fly code (which is now in ED_view3d_cameracontrol_update ).
Is this by design?

The fix would be to remove the if (vctrl->root_parent) {} block.
To quickly test it: if (vctrl->root_parent && false) { (line 235 on view3d_camera_control.c)

@jylhis what is your usecase? Why did you parent your camera and to what object?

@ideasman42 that dates back to the original fly code (which is now in ED_view3d_cameracontrol_update ). Is this by design? The fix would be to remove the **if (vctrl->root_parent) {}** block. To quickly test it: **if (vctrl->root_parent && false) {** (line 235 on view3d_camera_control.c) @jylhis what is your usecase? Why did you parent your camera and to what object?

This is a preference, see:

Prefs -> Interface -> View Manipulation -> Camera Parent Lock

However now we have a section for fly mode options it should really be moved there.

This is a preference, see: Prefs -> Interface -> View Manipulation -> Camera Parent Lock However now we have a section for fly mode options it should really be moved there.

Fix proposed on D102

Fix proposed on [D102](https://archive.blender.org/developer/D102)

The option to move the parent around applies elsewhere so moving to fly mode doesn't make sense.

Note - the purpose of flying the parent, not the camera - is so you can use fly mode with 'camera-rigs' where the camera is often the child of other controlling objects,

closing.

The option to move the parent around applies elsewhere so moving to fly mode doesn't make sense. Note - the purpose of flying the parent, not the camera - is so you can use fly mode with 'camera-rigs' where the camera is often the child of other controlling objects, closing.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37806
No description provided.