fix for T37806 - Using Fly Navigationing with camera with parent

* default behaviour changed to 'not moving parent'
* move the settings to walk_navigation
* use the same struct setting to fly_navigation (we can make walk/fly
  have their own property, but I think it's overkill to do it now only
  for this flag value.